2010-02-17  Romain Francois <romain@r-enthusiasts.com>

	* added support for as<Mat<T>> with T %in% int, double, float, unsigned int
	
2010-02-16  Romain Francois <romain@r-enthusiasts.com>

	* initial version, covering wrap(Mat), wrap(Col), wrap(Row)