@@ -4,20 +4,32 @@
 #include <RcppCommon.h>
 #include <armadillo>
 
+#define RCPPARMA_FORWARD(TYPE) \
+	template <> arma::Mat<TYPE> as< arma::Mat<TYPE> >( SEXP ) ; \
+	template <> arma::Col<TYPE> as< arma::Col<TYPE> >( SEXP ) ; \
+	template <> arma::Row<TYPE> as< arma::Row<TYPE> >( SEXP ) ; 
+
 /* forward declarations */
 namespace Rcpp{
 	template <typename T> SEXP wrap ( const arma::Mat<T>& ) ;
 	template <typename T> SEXP wrap ( const arma::Row<T>& ) ;
 	template <typename T> SEXP wrap ( const arma::Col<T>& ) ;
-	
-	template <> arma::Mat<int> as< arma::Mat<int> >( SEXP ) ;
-	template <> arma::Mat<double> as< arma::Mat<double> >( SEXP ) ;
+	       
+	RCPPARMA_FORWARD(int)
+	RCPPARMA_FORWARD(double)
+	RCPPARMA_FORWARD(float)
+	RCPPARMA_FORWARD(arma::s32)
 }
 
 #include <Rcpp.h>
 
 RcppExport SEXP RcppArmadilloExample() ;
-RcppExport SEXP RcppArmadilloExample_as( SEXP );
+RcppExport SEXP RcppArmadilloExample_as_Mat( SEXP );
+RcppExport SEXP RcppArmadilloExample_as_Col( SEXP );
+RcppExport SEXP RcppArmadilloExample_as_Row( SEXP );
+
+#define RCPPARMA_COPY(in,out,n) for( int i=0; i<n; i++) { out[i] = in[i] ; } 
+#define RCPPARMA_COPY_CAST(in,out,n,TYPE) for( int i=0; i<n; i++) { out[i] = static_cast<TYPE>(in[i]) ; } 
 
 namespace Rcpp{
 
@@ -61,7 +73,7 @@ namespace Rcpp{
 namespace RcppArmadillo{
 
 /* when a cast is needed */
-template <typename T> ::arma::Mat<T> convert__dispatch( SEXP x, T, ::Rcpp::traits::true_type ){
+template <typename T> ::arma::Mat<T> convert_Mat__dispatch( SEXP x, T, ::Rcpp::traits::true_type ){
 	if( !Rf_isMatrix(x) ){
 		throw std::range_error( "not a matrix" ) ;
 	}
@@ -69,14 +81,12 @@ template <typename T> ::arma::Mat<T> convert__dispatch( SEXP x, T, ::Rcpp::trait
 	::Rcpp::IntegerVector dim = input.attr("dim") ;
 	::arma::Mat<T> out( dim[0], dim[1] ) ;
 	int n = dim[0] * dim[1] ;
-	for( int i=0; i<n; i++){
-		out[i] = static_cast<T>( input[i] ) ;
-	}
+	RCPPARMA_COPY_CAST(input, out, n, T) ;
 	return out;
 }
 
 /* when no cast is needed */
-template <typename T> ::arma::Mat<T> convert__dispatch( SEXP x, T, ::Rcpp::traits::false_type ){
+template <typename T> ::arma::Mat<T> convert_Mat__dispatch( SEXP x, T, ::Rcpp::traits::false_type ){
 	if( !Rf_isMatrix(x) ){
 		throw std::range_error( "not a matrix" ) ;
 	}
@@ -84,22 +94,66 @@ template <typename T> ::arma::Mat<T> convert__dispatch( SEXP x, T, ::Rcpp::trait
 	::Rcpp::IntegerVector dim = input.attr("dim") ;
 	::arma::Mat<T> out( dim[0], dim[1] ) ;
 	int n = dim[0] * dim[1] ;
-	for( int i=0; i<n; i++){
-		out[i] = input[i] ;
-	}
+	RCPPARMA_COPY(input, out, n) ;
+	return out;
+}
+
+/* when a cast is needed */
+template <typename T> ::arma::Col<T> convert_Col__dispatch( SEXP x, T, ::Rcpp::traits::true_type ){
+	::Rcpp::SimpleVector< ::Rcpp::traits::r_sexptype_traits<T>::rtype > input(x);
+	int n = input.size() ;
+	::arma::Col<T> out( n ) ;
+	RCPPARMA_COPY_CAST(input, out, n, T) ;
+	return out;
+}
+
+/* when no cast is needed */
+template <typename T> ::arma::Col<T> convert_Col__dispatch( SEXP x, T, ::Rcpp::traits::false_type ){
+	::Rcpp::SimpleVector< ::Rcpp::traits::r_sexptype_traits<T>::rtype > input(x);
+	int n = input.size() ;
+	::arma::Col<T> out( n ) ;
+	RCPPARMA_COPY(input, out, n) ;
+	return out;
+}
+
+/* when a cast is needed */
+template <typename T> ::arma::Row<T> convert_Row__dispatch( SEXP x, T, ::Rcpp::traits::true_type ){
+	::Rcpp::SimpleVector< ::Rcpp::traits::r_sexptype_traits<T>::rtype > input(x);
+	int n = input.size() ;
+	::arma::Row<T> out( n ) ;
+	RCPPARMA_COPY_CAST(input, out, n, T) ;
+	return out;
+}
+
+/* when no cast is needed */
+template <typename T> ::arma::Row<T> convert_Row__dispatch( SEXP x, T, ::Rcpp::traits::false_type ){
+	::Rcpp::SimpleVector< ::Rcpp::traits::r_sexptype_traits<T>::rtype > input(x);
+	int n = input.size() ;
+	::arma::Row<T> out( n ) ;
+	RCPPARMA_COPY(input, out, n) ;
 	return out;
 }
 
 /* dispatch depending on whether the type of data in the R vector is the same as T */
-template <typename T> ::arma::Mat<T> convert( SEXP x, T t){
-	return convert__dispatch( x, t, typename ::Rcpp::traits::r_sexptype_needscast<T>() ) ;
+template <typename T> ::arma::Mat<T> convert_Mat( SEXP x, T t){
+	return convert_Mat__dispatch( x, t, typename ::Rcpp::traits::r_sexptype_needscast<T>() ) ;
 }
-	
+template <typename T> ::arma::Col<T> convert_Col( SEXP x, T t){
+	return convert_Col__dispatch( x, t, typename ::Rcpp::traits::r_sexptype_needscast<T>() ) ;
+}
+template <typename T> ::arma::Mat<T> convert_Row( SEXP x, T t){
+	return convert_Row__dispatch( x, t, typename ::Rcpp::traits::r_sexptype_needscast<T>() ) ;
+}
+
+
 }
 
 /* as */
 
-#define GENERATE_CONVERTERS(TYPE) template<> arma::Mat<TYPE> as< arma::Mat<TYPE> >(SEXP x){ return RcppArmadillo::convert<TYPE>(x, TYPE()) ; } ;
+#define GENERATE_CONVERTERS(TYPE)  \
+	template<> arma::Mat<TYPE> as< arma::Mat<TYPE> >(SEXP x){ return RcppArmadillo::convert_Mat<TYPE>(x, TYPE()) ; } ; \
+	template<> arma::Col<TYPE> as< arma::Col<TYPE> >(SEXP x){ return RcppArmadillo::convert_Col<TYPE>(x, TYPE()) ; } ; \
+	template<> arma::Row<TYPE> as< arma::Row<TYPE> >(SEXP x){ return RcppArmadillo::convert_Row<TYPE>(x, TYPE()) ; } ;
 
 GENERATE_CONVERTERS(int)
 GENERATE_CONVERTERS(arma::u32)
@@ -107,6 +161,9 @@ GENERATE_CONVERTERS(double)
 GENERATE_CONVERTERS(float)
 
 #undef GENERATE_CONVERTER
+#undef RCPPARMA_COPY
+#undef RCPPARMA_COPY_CAST
+#undef RCPPARMA_FORWARD
 
 }
 
